# BMP-image-processor

./: BMP.cpp  BMP.h  BMPHeader.h  CMakeLists.txt  ChannelWiseFilter.cpp  ChannelWiseFilter.h  CommandLineParser.cpp  CommandLineParser.h  CompositeFilter.cpp  CompositeFilter.h  ConvolutionFilter.cpp  ConvolutionFilter.h  CropFilter.cpp  CropFilter.h  CrystallizeFilter.cpp  CrystallizeFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Filter.cpp  Filter.h  FiltersFactory.cpp  FiltersFactory.h  FiltersInformation.cpp  FiltersInformation.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayScaleFilter.cpp  GrayScaleFilter.h  Image.cpp  Image.h  NegativeFilter.cpp  NegativeFilter.h  README.md  SharpeningFilter.cpp  SharpeningFilter.h  ThresholdFilter.cpp  ThresholdFilter.h  image_processor  image_processor.cpp  readme.md  (+12 more)
test_script/: test_image_processor.py
